More work on smugglers and making the city come to life.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A1-pay-Thekesh-a-visit.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A1-pay-Thekesh-a-visit.html
@@ -14,8 +14,17 @@
     </ul>
 
     <p>
-        When stepping through the secret passage behind the closet. The person gets pounced by a <a href="../../monsters/Effigy-lion+guard.html">effigy lion</a>
+        When they keep standing in front of the door somebody passes by.
+        He ask them if they are looking for Thekesh and he tells them that he is mostly awake at night.
+    </p>
+
+    <p>
+        When stepping through the secret passage behind the closet in Thekesh his shack. The person gets pounced by a <a href="../../monsters/Effigy-lion+guard.html">effigy lion</a>
         and the symbol of stunning is triggered.
+    </p>
+
+    <p>
+        When visiting between 00 and 06 continue with <a href="A2-catching-smugglers.html">catching smugglers</a>
     </p>
 {% endblock %}
 
@@ -45,7 +54,10 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>
+        Discover secret piles of Mithral
+        (if given to authorities Olivet has to buy from <a href="../../characters/Dragbar+metal-merchant.html">Dragbar</a>)
+    </p>
 {% endblock %}
 
 {% block creatures %}
