--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/south-side-nobles.html
@@ -7,8 +7,9 @@
     <p>
         During the morning two drunk men stroll the streets.
         As soon as they notice the adventurers they try to make contact and see if they have any beer.
-        When asked one man indicates they came from the Ocean's Pleasure, where else, upon which the other hushes him,
+        When asked one man indicates they came from the Ocean's Pleasure in the harbor, where else, upon which the other hushes him,
         as "it doesn't exist".
+        (adventurers are allowed to search for the Ocean's Pleasure in <a href="../trade-district/harbor/">the harbor</a>)
     </p>
 {% endblock %}
 
