--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/harbor-slums.html
@@ -45,7 +45,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Full of Elven haters</p>
 {% endblock %}
 
 {% block knowledges %}
