--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/index.html
@@ -24,12 +24,16 @@
     <p>
         There are numerous ships in the harbor.
         None of the ships below can be visited unless party is searching for them.
+        Roll random to see what they find and see what they will make of it.
     </p>
-    <ul>
+    <ol>
         <li><a href="Riebelfant-galley.html">Riebelfant galley</a></li>
         <li><a href="the-oceans-night+pleasure-house.html">The Ocean's Night</a></li>
         <li><a href="the-red-wave+elite-pirates-galley.html">The Red Wave</a></li>
-    </ul>
+        <li>Random galley with people patrolling the deck (use Riebelfant galley as base).</li>
+        <li>Smaller sailing boat where two people are making out on the deck.</li>
+        <li>Nothing of interest is found.</li>
+    </ol>
 {% endblock %}
 
 {% block achievements %}
@@ -45,7 +49,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Full of Elven haters</p>
 {% endblock %}
 
 {% block knowledges %}
