--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html
@@ -17,7 +17,7 @@
 {% block locations %}
     <p>Places of interest on the map.</p>
 
-    <h4>Free access</h4>
+    <h4>1gp to get on deck (guard is reluctant to let people know there is something going on)</h4>
     <ol>
         <li>The deck is a place of gambling. There are around 5 games going on (1d10 gp stakes).</li>
         <li>The captain's cabin is guarded by 2 guards (inside 3 more private guards)</li>
