--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
@@ -2,17 +2,19 @@
 
 {% block title %}Traders Guild{% endblock %}
 {% block summary %}A luxurious guild for all merchants. Stock is "exchanged" here.{% endblock %}
-{% block todo %}Make selling pitch for Falok.{% endblock %}
 
 {% block events %}
     <p>If adventurers hang around long enough on ground floor following events take place.</p>
-    <ul>
+    <ol>
         <li><a href="../../../characters/Falok+stock-merchant.html">Falok</a> the stock merchant approaches rich looking adventurer.</li>
-        <li>He makes an offer to sell the adventurers Global Convoy stock.</li>
+        <li>Looks like you're not around from here. Where are you from?</li>
         <li>This investment will make you money without working yourself!</li>
         <li>Just let the Faerun Trade Group do all the lifting.</li>
+        <li>He asks about Morgi if he is present.</li>
+        <li>Doesn't trust him. Makes offer to go upstairs without Morgi.</li>
+        <li>He makes an offer to sell the adventurers Global Convoy stock.</li>
         <li>If they want to invest seriously he is prepared to give more information.</li>
-    </ul>
+    </ol>
     <p>
         If adventurers come up with a serious investment a contract gets created in which the adventurers promise non-disclosure.
         The contract also binds the Faerun Trade Group to share the profits made through the Global Convoy project
@@ -24,7 +26,9 @@
     <p><b>
         The traders guild consists of two floors.
         The ground floor is one big room where people seem to make agreements and exchange papers constantly.
+        Most people are not noticing you, but people who notice Morgi seem to be disapprove.
         The first floor is closed to the public.
+
     </b></p>
 
     <p>
@@ -50,7 +54,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Full of Elven haters</p>
 {% endblock %}
 
 {% block knowledges %}
