--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
@@ -36,7 +36,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Full of Elven haters</p>
 {% endblock %}
 
 {% block knowledges %}
