--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
@@ -4,7 +4,17 @@
 {% block summary %}District consisting mostly of common houses and some nice places to spend coin.{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>
+        When the city is starting to wake up and the adventurers are strolling around to see what Yauhnn has to offer.
+        Somebody bumps into <a href="../../../characters/Dralen+magic-shop-keeper.html">Dralen</a>.
+        He sneers at the person, but quickly makes his move into the crowd.
+        He walks as if he is heading somewhere and it's not to simply have a good time.
+    </p>
+
+    <p>
+        If they stay inside an inn until closing time, somebody they have been talking too asks if they have interest in a little gamble with booze.
+        If so he takes them to <a href="harbor/the-oceans-night+pleasure-house.html">Ocean's Night</a>
+    </p>
 {% endblock %}
 
 {% block locations %}
@@ -23,7 +33,6 @@
         There is one inn that is quite famous called The Rolling Coin
         It is the place for people from outside the city to stay, because their mounts will be taken care of and the good night life of the city.
         Some of the best bards in the world play here.
-        If they frisk <a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> they find the keys to a room in this inn. Her stuff was stored by the inn owner.
     </p>
 
     <p>From here adventurers can:</p>
@@ -35,7 +44,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>TODO: what can they undertake after Mirika's relevations?</p>
+    <p>If they frisk <a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> they find the keys to a room in this inn. Her stuff was stored by the inn owner.</p>
 {% endblock %}
 
 {% block creatures %}
@@ -55,8 +64,15 @@
         <dt>LocalDC:</dt>
         <dd>15 >= <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan Hichek</a> owns most of the nightlife.</dd>
     </dl>
-    <p>About: Waukeen relic</p>
-    <p>About: Fake gold</p>
+    <dl class="dc">
+        <dt>SenseMotiveDC:</dt>
+        <dd>15 <= D: The cargo has arrived. It was brought by The Flat Wave. M: I'll be sure to pick it up at 2 tonight.</dd>
+        <dd>16 >= Hard to make anything out with all the crowd</dd>
+        <dd>
+            20 >= D: The cargo has arrived. It was brought by <a href="harbor/the-red-wave+elite-pirates-galley.html">The Red Wave</a>.
+            M: We'll be sure to pick it up at 2 tonight.
+        </dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
