--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
@@ -56,7 +56,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p>Full of Elven haters</p>
 {% endblock %}
 
 {% block knowledges %}
