Update with more detailed descriptions.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A2-catching-smugglers.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A2-catching-smugglers.html
@@ -4,19 +4,7 @@
 {% block summary %}Either through the Red Wave or through following Thekesh/Mortabar they can discover the smuggling route{% endblock %}
 
 {% block events %}
-    <p>The whereabouts of <a href="../../characters/Thekesh-Moltabar+naieve-entrepeneur.html">Thekesh/Moltabar</a> depends on the time of the day. Here is his schedule:</p>
-    <ul>
-        <li>06-12 -> Moltabar (in the shop)</li>
-        <li>12-15 -> Thekesh (market, breakers, cave)</li>
-        <li>15-18 -> Moltabar (in the shop)</li>
-        <li>18-00 -> a sleep (house of Moltabar above his store)</li>
-        <li>00-06 -> Thekesh (seawater, breakers, cave, harbor)</li>
-    </ul>
-
-    <p>
-        When stepping through the secret passage behind the closet. The person gets pounced by a <a href="../../monsters/Effigy-lion+guard.html">effigy lion</a>
-        and the symbol of stunning is triggered.
-    </p>
+    <p>no events</p>
 {% endblock %}
 
 {% block locations %}
