--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
@@ -5,7 +5,7 @@
 
 {% block events %}
     <p>
-        When the city is starting to wake up and the adventurers are strolling around to see what Yauhnn has to offer.
+        When the city night life starting to wake up and the adventurers are strolling around to see what Yauhnn has to offer.
         Somebody bumps into <a href="../../../characters/Dralen+magic-shop-keeper.html">Dralen</a>.
         He sneers at the person, but quickly makes his move into the crowd.
         He walks as if he is heading somewhere and it's not to simply have a good time.
@@ -20,6 +20,7 @@
 {% block locations %}
     <p><b>
         There are also loads and loads of small places to eat and drink in this area. Some of them have great views over the sea.
+        On the side of the mainland the caves seem to hold places to eat and drink.
     </b></p>
 
     <p>Main places of interest:</p>
@@ -30,8 +31,8 @@
     </ul>
 
     <p>
-        There is one inn that is quite famous called The Rolling Coin
-        It is the place for people from outside the city to stay, because their mounts will be taken care of and the good night life of the city.
+        There is one inn that is quite famous called The Rolling Coin.
+        It is the place for people from outside the city to stay if they can afford it.
         Some of the best bards in the world play here.
     </p>
 
@@ -45,6 +46,7 @@
 
 {% block achievements %}
     <p>If they frisk <a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> they find the keys to a room in this inn. Her stuff was stored by the inn owner.</p>
+    <p>If they read the lips of Dralen and Moltabar they can search for The Red Wave in <a href="../../../places/Yauhnn/trade-district/harbor/">the harbor</a>.</p>
 {% endblock %}
 
 {% block creatures %}
@@ -66,11 +68,11 @@
     </dl>
     <dl class="dc">
         <dt>SenseMotiveDC:</dt>
-        <dd>15 <= D: The cargo has arrived. It was brought by The Flat Wave. M: I'll be sure to pick it up at 2 tonight.</dd>
+        <dd>15 <= D: The cargo has arrived. It was  brought by The Flat Wave. M: I'll be sure to pick it up with the dogs at 2 tonight.</dd>
         <dd>16 >= Hard to make anything out with all the crowd</dd>
         <dd>
             20 >= D: The cargo has arrived. It was brought by <a href="harbor/the-red-wave+elite-pirates-galley.html">The Red Wave</a>.
-            M: We'll be sure to pick it up at 2 tonight.
+            M: We'll be sure to pick it up at her at the docks at 2 tonight.
         </dd>
     </dl>
 {% endblock %}
@@ -81,5 +83,4 @@
 
 {% block misc %}
     <p>Frisked Mirika and asked inn keep about the key -> handout 11-Mirikas-endeavor.odt</p>
-    <p>Both the buildings and the caves are used for storage.</p>
 {% endblock %}
