--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
@@ -12,6 +12,7 @@
         This area is filled mostly with well guarded warehouses.
         Some of them have a shop. You see mostly clothing, fabrics and wood shops.
         The shops do not look very wealthy, but seem well maintained.
+        Some warehouses are setup so close to the cliff face that you expect that most of the storage is done in caves.
     </b></p>
 
     <p>From here adventurers can:</p>
@@ -61,5 +62,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>Both the buildings and the caves are used for storage.</p>
+    <p>no misc</p>
 {% endblock %}
