Lots of small updates to get the city in shape for the next session.

--- a/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
@@ -7,8 +7,22 @@
         This project consists of cutting transport costs/risks and evading taxes by teleporting past customs.
         The heresy lies in that this group took loans as if they already made the profit.
         Now the goods are stocked as long as the device is not ready.
-        Trade in this stock is currently blooming.
+        Trade in this stock is currently blooming, because they are profitable, but people are not aware that Yauhnn as a result is more and more living on the promise of goods,
+        instead of real goods.
+        The FTG is playing a pyramid game as long as the stored goods in Cormyr can't be delivered.
+        And the bubble is about to burst.
     </p>
+
+    <p>There are these reasons for the adventures to stop the FTG</p>
+    <ul>
+        <li>Cormyr will miss millions of tax revenue, it will ruin Cormyrs social tax system</li>
+        <li>The evil pollution will run unchecked if Hanuman can't perform his rituals. The evil will spread all over Faerun due to the teleport gates the installation creates</li>
+        <li>After all debts have been paid, it will be easy to out compete any rivals on any market</li>
+        <li>It will hit Olivet where it hurts</li>
+        <li>Olivet will seize power and hold on to it to earn even more money</li>
+        <li>Hoarding capital is bad, money should roll</li>
+    </ul>
+
     <p>The members of the council that form the FTG:</p>
     <ul>
         <li><a href="../characters/Valof+Waukeen-cleric.html">Valof</a> (head of Waukeen temple)</li>
@@ -28,5 +42,12 @@
         <dd>32 >= Head of Waukeen temple named <a href="../characters/Valof+Waukeen-cleric.html">Valor</a> has initiated the group.</dd>
         <dd>34 >= <a href="../characters/Olivet+Magic-merchant.html">Olivet</a> is also part of the group.</dd>
         <dd>36 >= <a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> is a Gold Dwarf that ownes a lot of mines and smiths and is part of the council.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>LocalDC: (Cormyr)</dt>
+        <dd>14 >= Cormyr especially tries to keep the tax burden for its citizens low</dd>
+        <dd>18 >= It does so by taxing international trade</dd>
+        <dd>20 >= This tax policy infuriates Sembians, as well as the Waukeen temple</dd>
     </dl>
 {% endblock %}
