--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/north-side-nobles.html
@@ -16,6 +16,11 @@
         The inscription reads: "the golden age is coming"
     </b></p>
 
+    <p>
+        In front of one building that reads <a href="../../../groups/Faerun-trade-group.html">Faerun Trade Group</a> a man is talking to a closed door.
+        He says that he wants to cancel his investment and that he needs his money now. He seems quite desparate, but the door remains shut.
+    </p>
+
     <p>It is hard to distinguish one house from another and locations below can't be reached unless they know they want to go there.</p>
     <ul>
         <li>The house of <a href="../../../characters/Dralen+magic-shop-keeper.html">Dralen</a></li>
@@ -73,12 +78,5 @@
         Stealing is never without risks and every night there is probably an incident where the rogue almost gets caught.
         After stealing 10.000 euro in the city there starts to a lot more awareness.
         Per 10.000 gp there is a +10% change that a night goes horribly wrong and the rogue gets caught successfully.
-    </p>
-    <h4>Counterfeiting</h4>
-    <p>
-        As an illusionist it is possible to counterfeit the fake currency that they have in Sembia.
-        Every amount spend below 2000 is safe. Money above 2000 will be checked and casters need to succeed on SpellcraftDC30 to pass a casual test.
-        After counterfeiting 10.000 euro there is a higher change of a thorough investigation that surely fails unless epic magic is involved.
-        Per 10.000 gp there is a +10% change that money used in a transaction is fake.
     </p>
 {% endblock %}
