--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/outside-the-walls.html
@@ -1,15 +1,28 @@
-{% extends "dnd/abstract/place.html" %} {# TODO: update #}
+{% extends "dnd/abstract/place.html" %}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
-{% block todo %}earn 750 a day as illusionist, mad preacher{% endblock %}
+{% block title %}Outside the walls{% endblock %}
+{% block summary %}A new neighborhood outside the city walls{% endblock %}
 
 {% block events %}
     <p>no events</p>
 {% endblock %}
 
 {% block locations %}
-    <p>This area should breath the atmosphere of Almere.</p>
+    <p><b>
+        Walking around the area you feel that something is not right.
+        When you look a little closer it is inevitable that at some point an illusion breaks and reveals the true neighborhood.
+        The houses here are very poorly build. It seems like things needed to be as cheap as possible.
+    </b></p>
+
+    <p>
+        On a small square in the middle of the neighborhood on top of a small wooden box somebody is shouting out towards the people.
+        Not a lot of people seem to take interest.
+        When you start listening it seems to be a cleric of Waukeen (called Youra) who states that buying something cheaply will end up in regret.
+        If you buy something you should make sure it is the best deal that you can get in order for the society as a whole to thrive.
+        Then he raves on that you should not make a living out of the promise of goods. Goods are there or they are not, here and now.
+        Do not think about what might be tomorrow, do not dream about its promises, for tomorrow changes as the weather. Unexpectedly violent.
+
+    </p>
 
     <p>From here adventurers can go to:</p>
     <ul>
@@ -42,5 +55,8 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>
+        When working as an illusionist in this area you have to make people believe again in some aspects of their houses that they distrust.
+        You earn 750gp a day with this work.
+    </p>
 {% endblock %}
