--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
@@ -33,5 +33,16 @@
             </ol>
         </div>
     </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <h4>Counterfeiting</h4>
+            <p>
+                As an illusionist it is possible to counterfeit the fake currency that they have in Sembia.
+                Every amount spend below 2000 is safe. Money above 2000 will be checked and casters need to succeed on SpellcraftDC30 to pass a casual test.
+                After counterfeiting 10.000 euro there is a higher change of a thorough investigation that surely fails unless epic magic is involved.
+                Per 10.000 gp there is a +10% change that money used in a transaction is fake.
+            </p>
+        </div>
+    </div>
 
 {% endblock %}
