--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
@@ -48,6 +48,7 @@
     <dl class="dc">
         <dt>GatherDC:</dt>
         <dd>18 >= Messenger business has been hard since Faerun Trade Shop has been setting up its own teleportation based messaging service.</dd>
+        <dd>19 >= When trading the people from Cormyr do not always take into account what damage a deal does to the welfare. Look at the price war with fish. That forces Locathah to catch a lot more than is healthy for the population, just to keep their head above water.</dd>
         <dd>20 >= The rangers have a lot of deaths to morn last year. They disappeared without leaving a trace.</dd>
         <dd>22 >= <a href="../../../characters/Taduan+hulorn-animal-merchant.html">Taduan Kaler</a> owns a lot of stables and is by far biggest cattle merchant in the area.</dd>
         <dd>22 >= <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan Hichek</a> is a big player on the food market.</dd>
