--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
@@ -82,8 +82,8 @@
         <dd>15 >= Cormyr has a ridiculous tax system.</dd>
         <dd>15 >= City is trying to make the slums a nice area. Hopefully that terrible smell will disappear together with the Locathah.</dd>
         <dd>18 >= Olivet is fucking his own sister.</dd>
-        <dd>18 >= Olivets sister is sharing the bed with married Hulorn.</dd>
         <dd>20 >= Red Whizard of Thay are planning to take over trade in magic.</dd>
+        <dd>25 >= Olivets sister is also sharing the bed with the married Hulorn.</dd>
     </dl>
 
     <dl class="dc">
@@ -96,8 +96,10 @@
     </dl>
 
     <dl class="dc">
-        <dt>LocalDC: (Sembia)</dt>
-        <dd>10 >= Cormyr doesn't put a high tax on its citizens, but do tax import heavily, which is bad for Sembian merchants.</dd>
+        <dt>LocalDC: (Cormyr)</dt>
+        <dd>14 >= Cormyr especially tries to keep the tax burden for its citizens low</dd>
+        <dd>18 >= It does so by taxing international trade</dd>
+        <dd>20 >= This tax policy infuriates Sembians, as well as the Waukeen temple</dd>
     </dl>
 {% endblock %}
 
