--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/the-fort.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/the-fort.html
@@ -12,6 +12,12 @@
         The fort is a part of the wall that surrounds the city. It is an old building, but quite well maintained.
         It still holds the cities garrison and head of the guards even though the thread from inland is minimal for the city.
     </b></p>
+
+    <p>
+        At the city entrance some merchants are trying to trade real gold for Waukeen gold.
+        People leaving the city or
+    </p>
+
     <p>From here adventurers can go to:</p>
     <ul>
         <li>Outside the city</li>
@@ -37,7 +43,14 @@
 {% endblock %}
 
 {% block knowledges %}
-   <p>no knowledges</p>
+   <dl class="dc">
+       <dt>GatherDC:</dt>
+       <dd>
+           10 >= On the road people prefer gold over Waukeen coins as the amount of disbelievers is a lot higher in the country side.
+           Many people leave for the Dalelands as well where the disbelievers are even more present.
+           1.1wc is worth 1gp
+       </dd>
+   </dl>
 {% endblock %}
 
 {% block items %}
@@ -45,5 +58,11 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <h4>Counterfeiting</h4>
+    <p>
+        As an illusionist it is possible to counterfeit the fake currency that they have in Sembia.
+        Every amount spend below 2000 is safe. Money above 2000 will be checked and casters need to succeed on SpellcraftDC30 to pass a casual test.
+        After counterfeiting 10.000 euro there is a higher change of a thorough investigation that surely fails unless epic magic is involved.
+        Per 10.000 gp there is a +10% change that money used in a transaction is fake.
+    </p>
 {% endblock %}
