--- a/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
@@ -2,9 +2,7 @@
 {% load staticfiles %}
 
 {% block name %}Sjahnsesh{% endblock %}
-{% block summary %}
-    A rather skilled ranger, but no match for the party. Willing to help as devotee to Talos.
-{% endblock %}
+{% block summary %}A rather skilled ranger, but no match for the party. Willing to help as devotee to Talos.{% endblock %}
 
 {% block motivation %}
     <ul>
