--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/empty.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/empty.html
@@ -31,3 +31,5 @@
 {% block feats %}{% endblock %}
 {% block grapple %}{% endblock %}
 {% block gear %}{% endblock %}
+
+{% block descriptions %}{% endblock %}
