--- a/src/templatefiles/templates/dnd/concrete/characters/Kala+waukeen-inquisitor.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Kala+waukeen-inquisitor.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/character.html" %}
 
-{% block name %}Kalong{% endblock %}
+{% block name %}Kala{% endblock %}
 {% block summary %}
     Cleric, Church Inquisitor for Waukeen. Wants to unravel the heresy within Waukeen temple.
 {% endblock %}
