--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-cleric-12.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-cleric-12.html
@@ -12,9 +12,9 @@
 {% block spell-like-abilities %}{% endblock %}
 {% block saves %}
     <ul>
-        <li>Fort +15</li>
-        <li>Ref +8</li>
-        <li>Will +16</li>
+        <li>Fort +12</li>
+        <li>Ref +5</li>
+        <li>Will +13</li>
     </ul>
 {% endblock %}
 {% block abilities %}
@@ -30,7 +30,7 @@
 {% block skills %}{% endblock %}
 {% block feats %}Weapon focus, Endurance, Die Hard, Dodge, Mobility{% endblock %}
 {% block grapple %}{% endblock %}
-{% block gear %}Vest of resistance +3, Necklace of Fireballs (V), Full plate +1, Wand cure serious wounds (20x), Mace +1 of paralytic burst, Periapt of Wisdom +2, Amulet of health +2 {% endblock %}
+{% block gear %}Necklace of Fireballs (V), Full plate +1, Wand cure serious wounds (20x), Mace +1 of paralytic burst, Periapt of Wisdom +2, Amulet of health +2 {% endblock %}
 
 {% block descriptions %}
 
