--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-whizard-12.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/elven-whizard-12.html
@@ -4,17 +4,17 @@
 {% block initiative %}+0{% endblock %}
 {% block speed %}30{% endblock %}
 {% block ac %}18/19 (t=13, ff=15){% endblock %}
-{% block attacks %}+9 (light crossbow){% endblock %}
-{% block damage %}1d10{% endblock %}
+{% block attacks %}+9 (longbow){% endblock %}
+{% block damage %}1d8{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}{% endblock %}
 {% block special-qualities %}Contingency (stoneskin){% endblock %}
 {% block spell-like-abilities %}{% endblock %}
 {% block saves %}
     <ul>
-        <li>Fort +8</li>
-        <li>Ref +7</li>
-        <li>Will +8</li>
+        <li>Fort +11</li>
+        <li>Ref +10</li>
+        <li>Will +11</li>
     </ul>
 {% endblock %}
 {% block abilities %}
@@ -30,7 +30,7 @@
 {% block skills %}{% endblock %}
 {% block feats %}Silent spell, Still spell, Quicken spell, Heighten spell, Dodge, +2 Fort{% endblock %}
 {% block grapple %}{% endblock %}
-{% block gear %}Headband of Intelligence +2, Bracers of armor +5, Ring of Water Breathing{% endblock %}
+{% block gear %}Headband of Intelligence +2, Bracers of armor +5, Ring of Water Breathing, Vest of resistance +3{% endblock %}
 
 {% block descriptions %}
 
@@ -73,6 +73,6 @@
     <ul>
         <li>3x Magic Missle</li>
         <li>Benign transposition (p27)</li>
-        <li>Wall of smoke (p235)</li>
+        <li>Arrow mind (p15)</li>
     </ul>
 {% endblock %}
