--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/barbarian-13.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/barbarian-13.html
@@ -3,18 +3,18 @@
 {% block hit-dice %}12HD, 108hp (144hp rage){% endblock %}
 {% block initiative %}+2{% endblock %}
 {% block speed %}40{% endblock %}
-{% block ac %}25/26 (t=12, ff=23) (-2 rage){% endblock %}
+{% block ac %}20/21 (t=12, ff=18) (-2 rage){% endblock %}
 {% block attacks %}+20/+15/+10 (+23/+17/+13 rage){% endblock %}
-{% block damage %}1d8+6 x3 (+3, rage){% endblock %}
+{% block damage %}1d12+9 x3 (+3, rage){% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}Rage{% endblock %}
 {% block special-qualities %}3/- DR, Improved uncanny dodge{% endblock %}
 {% block spell-like-abilities %}{% endblock %}
 {% block saves %}
     <ul>
-        <li>Fort +11</li>
-        <li>Ref +8</li>
-        <li>Will +10 (+3 rage)</li>
+        <li>Fort +8</li>
+        <li>Ref +5</li>
+        <li>Will +7 (+3 rage)</li>
     </ul>
 {% endblock %}
 {% block abilities %}
@@ -30,6 +30,6 @@
 {% block skills %}{% endblock %}
 {% block feats %}power attack, cleave, dodge, iron will, improved critical, weapon focus{% endblock %}
 {% block grapple %}{% endblock %}
-{% block gear %}Amulet of health +2, Breast plate +3, Shield heavy steel +3, Battleaxe +3, Cloak of resistance +3{% endblock %}
+{% block gear %}Amulet of health +2, Breast plate +3, Greataxe +3{% endblock %}
 
 {% block descriptions %}{% endblock %}
