Add smuggling info.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A2-catching-smugglers.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A2-catching-smugglers.html
@@ -4,7 +4,16 @@
 {% block summary %}Either through the Red Wave or through following Thekesh/Mortabar they can discover the smuggling route{% endblock %}
 
 {% block events %}
-    <p>no events</p>
+    <p>
+        When following Thekesh. The adventurers notice that he goes into the breakers slums at about one. They have a short briefing inside and then go to the Red Wave.
+        Then some half-locathah and humans start to carry crates from Thekesh his place to the breakers slums. The crates contains fish
+        Very late at night a bunch of half-locathah and humans start to carry crates towards Thekesh his place in the caves. (SearchDC will reveal mithral)
+    </p>
+    <p>
+        At the Red Wave when on stake out people with darkvision can roll a SpotDC20 for seeing multiple figures swimming in the water around the ship.
+        Not long after they hear a splash and the figures swim in the direction of the breakers slums.
+    </p>
+
 {% endblock %}
 
 {% block locations %}
