--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A1-pay-Thekesh-a-visit.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-first-day-in-Yauhnn/A1-pay-Thekesh-a-visit.html
@@ -18,6 +18,7 @@
         He ask them if they are looking for Thekesh and he tells them that he is mostly awake at night.
     </p>
 
+    <h4>Guarded</h4>
     <p>
         When stepping through the secret passage behind the closet in Thekesh his shack. The person gets pounced by a <a href="../../monsters/Effigy-lion+guard.html">effigy lion</a>
         and the symbol of stunning is triggered.
@@ -80,7 +81,7 @@
     <h4>From the outside</h4>
     <dl class="dc">
         <dt>SearchDC:</dt>
-        <dd>15 >= You find that the shabby door is closed with an excellent lock that is </dd>
+        <dd>15 >= You find that the shabby door is closed with an excellent lock that is.</dd>
     </dl>
     <dl class="dc">
         <dt>SpotDC:</dt>
@@ -97,7 +98,7 @@
     <dl class="dc">
         <dt>SearchDC:</dt>
         <dd>18 >= The shack after the one that is connected to Thekesh's place has a hole in the roof that leads to a narrow slit which is cut out of the rocks.</dd>
-        <dd>25 >= Inside the fish valuable mithral is hidden</dd>
+        <dd>25 >= Inside the fish valuable mithral is hidden (if guarded only!)</dd>
         <dd>32 >= Another symbol of stunning is present in the room after the initial one (with the hole in the ceiling).</dd>
     </dl>
 {% endblock %}
